# template-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/template_python/: __init__.py  main.py
tests/: test_main.py
