[project]
name = "template-python"
version = "0.1.0"
description = "A modern Python project template"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "todie", email = "dev@todie.io" }]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/todie/template-python"
Repository = "https://github.com/todie/template-python"
Issues = "https://github.com/todie/template-python/issues"

[project.scripts]
template-python = "template_python.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_python"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
]
ignore = ["S101", "TRY003", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/template_python --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/template_python"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
]
